# mf-search

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  log.py  main.py  pyproject.toml  t.py
sec_search/: __init__.py  llm.py  util.py
tests/: conftest.py  test_mutual_fund_search.py
tests/cache/: 65a290ce30b6525e90be59c1b17cde26_p.html
tests/data/: test_fund_ticker.csv
